--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,14 @@ repository: https://github.com/imujtaba8488/package_im_stepper.git
 issue_tracker: https://github.com/imujtaba8488/package_im_stepper/issues
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  #flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
